[metadata]
name = clouds2env
description = A script to generate environment variables based on clouds.yaml details
long_description = file: README.rst, LICENSE.rst
url = https://github.com/stephenfin/clouds2env
author = Stephen Finucane
author_email = stephen@that.guru
keywords = openstack
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
py_modules = clouds2env
install_requires =
    PyYAML

[options.entry_points]
console_scripts =
    clouds2env = clouds2env:main
